--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,7 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "My New Hugo Site"
+
+theme = "ananke"
+
+publishdir = "/var/www/blog"
